Fix card height on mobile devices

--- a/src/style.scss
+++ b/src/style.scss
@@ -38,6 +38,7 @@ body {
     left: 0;
     flex-direction: column;
     background-color: $white-color;
+    height: fit-content;
     width: min-content;
     margin: 1.75rem auto;
     border-radius: 1rem;
